# agente-IA-langhain-front-back-IA

./: .gitignore  README.md  example.env  package-lock.json  package.json
agents/: agent.py  llm.py  main.py  pyproject.toml  requirements.txt
backend/: package.json  tsconfig.json
backend/src/: main.ts
backend/src/chat/: chat.controller.ts  chat.gateway.ts  chat.service.ts
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  TypingIndicator.tsx
frontend/components/layout/: AppHeader.tsx  Sidebar.tsx
frontend/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Input.tsx
frontend/hooks/: useChat.ts  useWebSocket.ts
frontend/lib/: utils.ts
frontend/providers/: QueryProvider.tsx
frontend/services/: api.ts  chatService.ts  wsService.ts
frontend/types/: index.ts
