[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "langchain==0.3.14",
    "langchain-core==0.3.29",
    "langchain-google-genai==2.0.8",
    "langchain-openai==0.2.14",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.32.1",
]
